# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2010
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:
VERSION 0.6.xx
DATE 0x/xx/2011
40th Alpha Release

NEWS:

NEW: [features/enhancements]
+Remember Shelf layout and selected tab when application is restarted.

BUG FIXES:
+Fix issue that could result in crash when rapidly clicking on notebook buttons.
+Fix minor display issue in update checker gauge.
+Fix behavior of left/right arrow key motions in vim emulation mode to better
emulate vi.
+Fix issue where an invalid encoding would be detected as the default encoding
on some systems.
+Fix issue where ToolBar would not resize properly when appearance settings
where changed to use different size icons.

#-----------------------------------------------------------------------------#
VERSION 0.6.00
DATE 01/15/2011
39th Alpha Release

NEWS:

NEW: [features/enhancements]
+Improve Python AutoIndenter to better handle brackets (patch from Jens)
+Add Copy Filename option to tab menu (patch from Michael Rans)
+Extend Vi emulation mode to support motions for Enter, Space, and Backspace
+Improve file type detection for files that don't have file extensions.
+Add support for Cilk syntax highlighting (patch from michael.champigny)

BUG FIXES:
+Fix Python 2.5 compatibility issue.
+Fix Unicode handling issue in Python completer.
+Fix issue with incorrect dwell events being sent causing the calltip popups
to be shown when they shouldn't even after the mouse has left the window.
+Fix bug in RemoveAllBookmarks method when called from EditraStc instance.
+Fix Unicode handling issue in Replace All feature.
+Fix issue where cursor would still appear active in the text buffer even when
it did not have the keyboard focus.
+Fix DeadObject error that could occur after deletion of a secondary main window.